--- a/CarsRent.WPF/Pages/SettingsCategory.xaml
+++ b/CarsRent.WPF/Pages/SettingsCategory.xaml
@@ -8,13 +8,18 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SettingsCategory">
 
-    <Grid>
+    <Grid x:Name="gridInputs">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="70*"/>
-            <ColumnDefinition Width="30*"/>
+            <ColumnDefinition Width="65*"/>
+            <ColumnDefinition Width="35*"/>
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="90*"/>
+            <RowDefinition Height="10*"/>
+        </Grid.RowDefinitions>
 
-        <StackPanel x:Name="spLabels" Grid.Column="0"/>
-        <StackPanel x:Name="spInputs" Grid.Column="1"/>
+        <StackPanel x:Name="spLabels" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"/>
+        <StackPanel x:Name="spInputs" Grid.Column="1" Grid.Row="0"/>
+        <Button x:Name="btnSaveChanges" Content="Сохранить" Grid.Column="1" Grid.Row="1" Click="btnSaveChanges_Click"/>
     </Grid>
 </Page>
