Добавлена визуальная составляющая добавления нового арендатора.

--- a/CarsRent.WPF/MainWindow.xaml
+++ b/CarsRent.WPF/MainWindow.xaml
@@ -16,14 +16,12 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
-            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Button x:Name="btnCreate" Grid.Row="0" Grid.Column="0" Content="Ввести новые данные"/>
-        <Button x:Name="btnOpen" Grid.Row="0" Grid.Column="1" Content="Выбрать из старых данных"/>
-        <Button x:Name="btnCarsList" Grid.Row="0" Grid.Column="2" Content="Список машин"/>
-        <Button x:Name="btnUsersList" Grid.Row="0" Grid.Column="3" Content="Список арендаторов"/>
-        <Button x:Name="btnSettings" Grid.Row="0" Grid.Column="4" Content="Настройки" Click="btnSettings_Click"/>
+        <Button x:Name="btnCreate" Grid.Row="0" Grid.Column="0" Content="Составить договор"/>
+        <Button x:Name="btnCarsList" Grid.Row="0" Grid.Column="1" Content="Список машин"/>
+        <Button x:Name="btnUsersList" Grid.Row="0" Grid.Column="2" Content="Список арендаторов" Click="btnUsersList_Click"/>
+        <Button x:Name="btnSettings" Grid.Row="0" Grid.Column="3" Content="Настройки" Click="btnSettings_Click"/>
 
         <Frame x:Name="mainFrame" Grid.Row="1" Grid.ColumnSpan="5"/>
     </Grid>
