--- a/CarsRent.WPF/Pages/Renters.xaml
+++ b/CarsRent.WPF/Pages/Renters.xaml
@@ -10,7 +10,8 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="90*"/>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="80*"/>
             <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -19,10 +20,11 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Frame x:Name="rentetsFrame" Grid.Row="0" Grid.ColumnSpan="3"/>
+        <Button x:Name="btnList" Content="Вернуться к списку" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Visibility="Hidden" Click="btnList_Click"/>
+        <Frame x:Name="rentersFrame" Grid.Row="1" Grid.ColumnSpan="3"/>
         
-        <Button x:Name="btnAdd" Content="Добавить" Grid.Column="0" Grid.Row="1" Click="btnAdd_Click"/>
-        <Button x:Name="btnChange" Content="Изменить" Grid.Column="1" Grid.Row="1"/>
-        <Button x:Name="btnDelete" Content="Удалить" Grid.Column="2" Grid.Row="1"/>
+        <Button x:Name="btnAdd" Content="Добавить" Grid.Column="0" Grid.Row="2" Click="btnAdd_Click"/>
+        <Button x:Name="btnChange" Content="Изменить" Grid.Column="1" Grid.Row="2" IsEnabled="False"/>
+        <Button x:Name="btnDelete" Content="Удалить" Grid.Column="2" Grid.Row="2" IsEnabled="False"/>
     </Grid>
 </Page>
