--- a/CarsRent.WPF/MainWindow.xaml
+++ b/CarsRent.WPF/MainWindow.xaml
@@ -19,7 +19,7 @@
         </Grid.ColumnDefinitions>
 
         <Button x:Name="btnCreate" Grid.Row="0" Grid.Column="0" Content="Составить договор"/>
-        <Button x:Name="btnCarsList" Grid.Row="0" Grid.Column="1" Content="Список машин"/>
+        <Button x:Name="btnCarsList" Grid.Row="0" Grid.Column="1" Content="Список машин" Click="btnCarsList_Click"/>
         <Button x:Name="btnUsersList" Grid.Row="0" Grid.Column="2" Content="Список арендаторов" Click="btnUsersList_Click"/>
         <Button x:Name="btnSettings" Grid.Row="0" Grid.Column="3" Content="Настройки" Click="btnSettings_Click"/>
 
