--- a/CarsRent.WPF/Pages/ListPage.xaml
+++ b/CarsRent.WPF/Pages/ListPage.xaml
@@ -10,19 +10,26 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="32*"/>
+            <ColumnDefinition Width="18*"/>
+            <ColumnDefinition Width="18*"/>
+            <ColumnDefinition Width="32*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="80*"/>
+            <RowDefinition Height="70*"/>
+            <RowDefinition Height="10*"/>
             <RowDefinition Height="20*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel x:Name="spItems" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"/>
+        <StackPanel x:Name="spItems" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"/>
 
-        <Button x:Name="btnAdd" Content="Добавить" Grid.Column="0" Grid.Row="1" Click="btnAdd_Click"/>
-        <Button x:Name="btnChange" Content="Изменить" Grid.Column="1" Grid.Row="1" Click="btnChange_Click"/>
-        <Button x:Name="btnDelete" Content="Удалить" Grid.Column="2" Grid.Row="1" Click="btnDelete_Click"/>
+        <Button x:Name="btnAdd" Content="Добавить" Grid.Column="0" Grid.Row="2" Click="btnAdd_Click"/>
+        <Button x:Name="btnChange" Content="Изменить" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" Click="btnChange_Click"/>
+        <Button x:Name="btnDelete" Content="Удалить" Grid.Column="3" Grid.Row="2" Click="btnDelete_Click"/>
+
+        <Button x:Name="btnBack" Content="Назад" Grid.Column="0" Grid.Row="1" Click="btnBack_Click"/>
+        <Button x:Name="btnForward" Content="Вперед" Grid.Column="3" Grid.Row="1" Click="btnForward_Click"/>
+        <TextBox x:Name="tbxPageNumber" Text="1" Grid.Column="2" Grid.Row="1" FontSize="30px" TextAlignment="Center" VerticalAlignment="Center" Margin="25, 0"/>
+        <Button x:Name="btnGoToPage" Content="Перейти" Grid.Column="1" Grid.Row="1" Click="btnGoToPage_Click"/>
     </Grid>
 </Page>
